<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLTOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLEND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLIZQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLDRC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/LNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/NOMBRE"
        app:layout_constraintTop_toBottomOf="@id/GLTOP"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        tools:layout_editor_absoluteX="128dp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TXTnombre"
        app:layout_constraintTop_toBottomOf="@id/LNombre"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="125dp" />

    <TextView
        android:id="@+id/LApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/apellidos"
        app:layout_constraintTop_toBottomOf="@id/txtNombre"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/apellidos"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        app:layout_constraintTop_toBottomOf="@id/LApellidos"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/LEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edad"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        app:layout_constraintTop_toBottomOf="@id/txtApellidos"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="346dp" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="100"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        app:layout_constraintTop_toBottomOf="@id/LEdad"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="405dp" />


    <Button
        android:id="@+id/bAddDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/annadir"
        app:layout_constraintStart_toEndOf="@id/GLIZQ"
        app:layout_constraintEnd_toStartOf="@id/GLDRC"
        app:layout_constraintTop_toBottomOf="@id/txtEdad"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="546dp" />


</androidx.constraintlayout.widget.ConstraintLayout>